<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Antimicrobial Guidelines</string>
    <string name="action_settings">Settings</string>
    <string name="infection_reference_button_text">Infection Reference</string>
    <string name="prophylaxis_infection_button_text">Procedural prophylaxis of infections</string>
    <string name="Antimicrobial_renal_dysfunction_button_text">Antimicrobial for renal dysfunction</string>
    <string name="antimicrobial_reference_button_text">A-Z of antimicrobial drugs</string>
    <string name="interaction_check_button_text">Interaction Check</string>
    <string name="dose_calculator_button_text">Calculate a formula</string>
    <string name="contact_us_button_text">Contact Us</string>
    <string name="copyright_info">Copyright© 2013 Innovation Care. All Rights Reserved.</string>
    <string name="company_name">Innovation Care</string>
    <string name="search_hint">Search an antibiotic or infection</string>
    <string name="activity_category_menu_title">Infection References</string>
    <string name="consultant">Consultant: </string>
    <string name="tele_consultant">Tele: (221) 4450</string>
    <string name="useful_links_text">Useful Links</string>
    <string name="lynda">Dr Lynda Fenelon</string>
    <string name="kirsten">Dr Kirsten Schaffer</string>
    <string name="susan">Dr Susan FitzGerald</string>
    <string name="deirdre">Dr Deirdre O\'Brien</string>
    <string name="vivien">Dr Vivien Murphy</string>
    <string name="william">Prof William Hall</string>
    <string name="return_to_home_button_text">Home</string>
    <string name="registrar">Registrars: </string>
    <string name="tele_registrar">Tele:(221)4949/3460/3459/3284</string>
    <string name="address">Ward registrar bleep 480 \n ICU/Oncology/Haematology/Liver bleep 685</string>
    <string name="pharmacist">Pharmacist: </string>
    <string name="antimicrobial">Antimicrobial Pharmacist</string>
    <string name="zulema">Zulema Gonzalez bleep 528</string>
    <string name="SVUH">Medicines Information Service SVUH</string>
    <string name="tele_pharmacy">Tele:(221)4139/3696</string>
    <string name="infection">Infection: </string>
    <string name="operation_label_text">Operation</string>
    <string name="duration_label_text">Duration</string>
    <string name="antibiotic_label_text">Antibiotic</string>
    <string name="IPCNfull">Infection Prevention and Control</string>
    <string name="tele_infection">Tel (221) 3197</string>
    <string name="IPCN">IPCN on duty bleep 122</string>
    <string name="laboratory">Laboratory</string>
    <string name="tele_laboratory">Tele:(221) 4450/4470</string>
    <string name="title_activity_infection_list">InfectionListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_interaction">Interaction</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="title_activity_antibiotic_list">AntibioticListActivity</string>
    <string name="presentation_label_text">Presentation</string>
    <string name="organism_label_text">Organism</string>
    <string name="comments_label_text">Comments</string>
    <string name="antibiotic_list_label_text">Antibiotics</string>
    <string name="search_button_text">Search</string>
    <string name="update_button_text">Update</string>
    <string name="useful_links_button_text">Useful links</string>
    <string name="title_activity_display_antibiotic_link">DisplayAntibioticLinkActivity</string>
    <string name="title_activity_display_antibiotic">DisplayAntibioticActivity</string>
    <string name="title_activity_surgery_content">Surgery Content</string>
    <string name="GFR">GFR-cockroft</string>
    <string name="MDRD">GFR-mdrd</string>
    <string name="CreatinieClearance">Creatinie Clearance</string>
    <string name="title_activity_calculator_list">DisplayCalcultorListActivity</string>
    <string name="title_activity_cockroft">CockroftActivity</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="mess">Mess(kg):</string>
    <string name="serum">Serum Creatinine:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="calculate">Calculate</string>
    <string name="csvalue">0.005to1</string>
    <string name="messvalue">10to200</string>
    <string name="agevalue">1to150</string>
    <string name="title_activity_mdrd">MdrdActivity</string>
    <string name="american">American</string>
    <string name="title_activity_awb">AWBActivity</string>
    <string name="IBW">IBW(kg):</string>
    <string name="aw">actual weight(kg):</string>
    <string name="ABW">ABW</string>
    <string name="title_activity_cc_list">CcListActivity</string>
    <string name="nonobese">Non-Obese</string>
    <string name="obese">Obese</string>
    <string name="title_activity_ccno">CcnoActivity</string>
    <string name="CreatinieUrine">CreatinieUrine:</string>
    <string name="CreatinieSerum">CreatinieSerum:</string>
    <string name="VolumeUrine">VolumeUrine:</string>
    <string name="Time">Time</string>
    <string name="mmolepr">micromoles/L</string>
    <string name="title_activity_ccob">CcobActivity</string>
    <string name="height">Height(m):</string>
<<<<<<< HEAD
	<string name="heightvalue">1to2.5</string>
	<string name="nonamerican">Non-american</string>
=======
    <string name="heightvalue">1to2.5</string>
    <string name="nonamerican">Non-american</string>
    <string name="title_activity_md">MDActivity</string>

>>>>>>> bac665e2a53258f4685a4814cf9b48a49db1fac1
</resources>