<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/trconsultant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvconsultant"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/consultant"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/teleconsul"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/tele_consultant"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvlynda"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/lynda"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvkirsten"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/kirsten"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvsusan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/susan"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvdeirdre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/deirdre"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvvivien"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/vivien"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvwilliam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/william"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/trregistrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvregistrar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvteleregistrars"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/tele_registrar"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvaddressline1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/trpharmacist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvpharmacist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pharmacist"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtelepharmacy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/tele_pharmacy"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvantimicrobial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/antimicrobial"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvzulema"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/zulema"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvSVUH"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/SVUH"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/trinfection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvinfection"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/infection"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvteleinfection"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/tele_infection"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIPCNfull"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:singleLine="true"
                android:text="@string/IPCNfull"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvIPCN"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/IPCN"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/trlaboratory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvlaboratory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/laboratory"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtelelaboratory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/tele_laboratory"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/company_name"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:id="@+id/trcopyrightInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/copyrightInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/copyright_info" />
    </TableRow>

</TableLayout>