<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MdrdActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:src="@drawable/grf" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number" 
        android:hint="@string/agevalue">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number" 
        android:hint="@string/csvalue">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/age"
        android:text="@string/serum"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sc"
        android:layout_marginTop="15dp" >

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />
    </RadioGroup>
    <RadioGroup
        android:id="@+id/race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/gender"
        android:layout_below="@+id/sc"
        android:layout_toRightOf="@+id/gender"
        android:layout_marginLeft="30dp" >

        <RadioButton
            android:id="@+id/american"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/american" />

        <RadioButton
            android:id="@+id/nonamerican"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonamerican" />
    </RadioGroup>
    
    <Button
        android:id="@+id/CCButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gender"
        android:layout_below="@+id/gender"
        android:background="@drawable/roundy_button"
        android:onClick="calculte"
        android:singleLine="false"
        android:text="@string/calculate" />


</RelativeLayout>